static/css/profil.css
.align-row {
    display: flex;
    flex-direction: row;
    height: 100%;
}

section h2 {
    justify-self: center;
}

.sidebar {
    position: relative;
    vertical-align: middle;
    z-index: 100;
    padding: 1rem;
    box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
    min-width: 10rem;
    height: 100%;
}

.sidebar-item {
    padding: 0;
}

.sidebar-item a {
    display: block;
    width: 100%;
    padding: 0.75rem 1rem;
    color: #333;
    text-decoration: none;
    box-sizing: border-box;
    border-radius: var(--border-radius);
    transition: all 0.2s ease;
}

.sidebar-item a:hover {
    background-color: #b36e4220;
}

.sidebar-item a::after {
    position: absolute;
    left: 4px;
    vertical-align: top;
    width: 4px;
    height: 1.5rem;
    transform: translate(0, -0.25rem);
    content: "";
    background-color: transparent;
    border-radius: 6px;
    transition: all 0.2s ease;
}

.sidebar-item a.active::after {
    background-color: var(--main-color);
}

.content {
    width: 100%;
    box-sizing: border-box;
    margin: 2rem;
}

form {
    border: none;
}

.avatar-wrapper {
    position: relative;
    height: 10rem;
    width: 10rem;
    border-radius: 50%;
    overflow: hidden;
    box-shadow: 1px 1px 15px -5px black;
    transition: all 0.2s ease;
    margin-left: 4rem;
}

@media screen and (max-width: 720px) {
    .avatar-wrapper {
        margin: 0 auto;
    }
}

.avatar-wrapper:hover {
    transform: scale(1.05);
    cursor: pointer;
}

.avatar-wrapper:hover .profile-pic {
    opacity: 0.5;
}

.avatar-wrapper .profile-pic {
    height: 100%;
    width: 100%;
    object-fit: cover;
    transition: all 0.2s ease;
}

.avatar-wrapper .profile-pic:after {
    content: "";
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    position: absolute;
    background: #ecf0f1;
    color: #34495e;
    text-align: center;
}

.avatar-wrapper .upload-button {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
}

.notify {  
    position: absolute;
    top: 3rem;
    left: 15%;
    width: 70%;
    height: 0;
    box-sizing: border-box;
    text-align: center;
    overflow: hidden;
    box-sizing: border-box;
    transition: all 0.2s;
}

.notify.active {  
    height: 50px;
}

section {
    opacity: 0;
    height: 0;
    transition: none;
}

section.active {
    opacity: 1;
    height: auto;
    transition: all 0.2s ease;
}

